# H-Calc2

./: stack.yaml
H-Calc/: H-Calc.cabal  README.md  TODO.md
H-Calc/sandbox/: Prelude.hs
H-Calc/src/Interpreter/: A_Nucleus.hs  B_Add.hs  C_Mul.hs  Interpreter.hs  Transfos.hs
H-Calc/test/Interpreter/: A_NucleusSpec.hs  B_AddSpec.hs  C_MulSpec.hs  InterpreterSpec.hs  TransfosSpec.hs
