name:                H-Calc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pcarbonn/H-Calc#readme
license:             BSD3
license-file:        LICENSE
author:              Pierre Carbonnelle
maintainer:          pierre.Carbonnelle@gmail.com
copyright:           2018 Pierre Carbonnelle
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:     src
  build-depends:      base-noprelude >= 4.9 && < 5
                    , constraints       >= 0.8
                    , deriving-compat   >= 0.3
                    , fmt
                    , hspec ==2.*
                    , megaparsec
                    , open-adt          >= 1
                    , parser-combinators
                    , recursion-schemes
                    , relude
                    , row-types         >= 0.2.3
                    , template-haskell  >= 2.11
  exposed-modules:    Interpreter.A_Nucleus
                    , Interpreter.B_Add
                    , Interpreter.C_Mul
                    , Interpreter.Interpreter
                    , Interpreter.Transfos
  other-modules:      Prelude
  default-language:   Haskell2010
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveFunctor
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , OverloadedLabels
                    , OverloadedStrings
                    , PatternSynonyms
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeApplications
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns

executable H-Calc
  hs-source-dirs:     sandbox
  main-is:            Main.hs
  build-depends:      base-noprelude >= 4.9 && < 5
                    , constraints       >= 0.8
                    , deriving-compat   >= 0.3
                    , fmt
                    , hspec ==2.*
                    , megaparsec
                    , open-adt          >= 1
                    , parser-combinators
                    , recursion-schemes
                    , relude
                    , row-types         >= 0.2.3
                    , template-haskell  >= 2.11
                    , H-Calc
  default-language:   Haskell2010
  ghc-options:        -Wall
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveFunctor
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , OverloadedLabels
                    , OverloadedStrings
                    , PatternSynonyms
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeApplications
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:      base-noprelude >= 4.9 && < 5
                    , constraints       >= 0.8
                    , deriving-compat   >= 0.3
                    , fmt
                    , hspec ==2.*
                    , megaparsec
                    , open-adt          >= 1
                    , parser-combinators
                    , recursion-schemes
                    , relude
                    , row-types         >= 0.2.3
                    , template-haskell  >= 2.11
                    , H-Calc
  default-language:   Haskell2010
  ghc-options:        -Wall
  default-extensions: GADTs
                    , OverloadedLabels
                    , OverloadedStrings
                    , TemplateHaskell
  build-tool-depends: hspec-discover:hspec-discover == 2.*
